--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "react-scripts": "5.0.1",
     "react-table-6": "^6.11.0",
     "sass": "^1.56.1",
+    "serve": "^14.1.2",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && serve -s ./build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
